Firefox misaligned boxes in states editor fixed

--- a/src/bma.package/css/LTLStates.less
+++ b/src/bma.package/css/LTLStates.less
@@ -446,8 +446,10 @@
         tr {
             td {
                 &.variable {
-                    width:200px;
+                    width:195px;
                     height:45px;
+                    min-width:195px;
+                    max-width:195px;
 
                     .state-container-image {
                         display:inline-block;
@@ -472,7 +474,7 @@
                     .state-text {
                         display:inline-block;
                         margin-left:3px;
-                        max-width:95px;
+                        max-width:85px;
                         .default-text();
                         overflow:hidden;
                         text-overflow: ellipsis;
