--- a/src/bma.package/css/bma.css
+++ b/src/bma.package/css/bma.css
@@ -4122,8 +4122,10 @@ ui-icon-arrowthickstop-1-n {
   overflow-y: auto;
 }
 .LTL-state table tr td.variable {
-  width: 200px;
+  width: 195px;
   height: 45px;
+  min-width: 195px;
+  max-width: 195px;
 }
 .LTL-state table tr td.variable .state-container-image {
   display: inline-block;
@@ -4145,7 +4147,7 @@ ui-icon-arrowthickstop-1-n {
 .LTL-state table tr td.variable .state-text {
   display: inline-block;
   margin-left: 3px;
-  max-width: 95px;
+  max-width: 85px;
   font-family: 'Segoe-UI';
   font-size: 13px;
   line-height: 17px;
